<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Main2Activity">


    <ScrollView
        android:id="@+id/bruto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/stulo"
                android:textColor="#a50dd6"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_of_employer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_des_arbeitgebers"
                android:inputType="textPersonName"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textStyle="bold"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/stundenanzahl"
                android:inputType="numberDecimal"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textStyle="bold"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/stundenlohn"
                android:inputType="numberDecimal"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textStyle="bold"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/steuerklasse_nur_bei_netto"
                android:inputType="number"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textStyle="bold"
                tools:ignore="Autofill" />

            <CalendarView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/calendar"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                tools:ignore="UselessLeaf"/>

            <Button
                android:id="@+id/brutto_netto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brutto_netto"
                android:background="@drawable/button"
                android:textColor="#ffffff"
                tools:ignore="ButtonStyle"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speichern"
                android:background="@drawable/button"
                android:textColor="#ffffff"
                tools:ignore="ButtonStyle"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/herunterladen"
                android:background="@drawable/button"
                android:textColor="#ffffff"
                tools:ignore="ButtonStyle"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>